--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@heroicons/react": "^2.2.0",
     "firebase": "^11.3.1",
     "formik": "^2.4.6",
+    "lab": "file:",
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-icons": "^5.5.0",
     "yup": "^1.6.1"
   },
   "devDependencies": {
