--- a/package.json
+++ b/package.json
@@ -9,12 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@heroicons/react": "^2.2.0",
+    "chart.js": "^4.4.8",
     "firebase": "^11.3.1",
     "formik": "^2.4.6",
+    "jsbarcode": "^3.11.6",
+    "jspdf": "^3.0.0",
     "lab": "file:",
     "next": "15.1.7",
+    "qrcode": "^1.5.4",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
