--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "formik": "^2.4.6",
     "jsbarcode": "^3.11.6",
     "jspdf": "^3.0.0",
+    "jspdf-autotable": "^5.0.2",
     "lab": "file:",
     "next": "15.1.7",
     "qrcode": "^1.5.4",
