--- a/package.json
+++ b/package.json
@@ -13,21 +13,32 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
+    "@radix-ui/react-label": "^2.1.4",
+    "@radix-ui/react-radio-group": "^1.3.2",
+    "@radix-ui/react-scroll-area": "^1.2.5",
+    "@radix-ui/react-select": "^2.2.2",
+    "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-tabs": "^1.1.7",
     "chart.js": "^4.4.8",
-    "firebase": "^11.3.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "firebase": "^11.6.0",
     "formik": "^2.4.6",
     "jsbarcode": "^3.11.6",
     "jspdf": "^3.0.0",
     "jspdf-autotable": "^5.0.2",
     "lab": "file:",
+    "lucide-react": "^0.501.0",
     "next": "15.1.7",
     "qrcode": "^1.5.4",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
-    "react-hook-form": "^7.54.2",
+    "react-hook-form": "^7.55.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.3.0",
+    "tailwind-merge": "^3.2.0",
+    "tailwindcss-animate": "^1.0.7",
     "yup": "^1.6.1"
   },
   "devDependencies": {
