--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "lab": "file:",
     "lucide-react": "^0.501.0",
     "next": "15.1.7",
+    "number-to-words": "^1.2.4",
     "qrcode": "^1.5.4",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
@@ -44,6 +45,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
+    "@types/number-to-words": "^1.2.3",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
