--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "clsx": "^2.1.1",
     "firebase": "^11.6.0",
     "formik": "^2.4.6",
+    "framer-motion": "^12.11.0",
     "jsbarcode": "^3.11.6",
     "jspdf": "^3.0.0",
     "jspdf-autotable": "^5.0.2",
